static/less/base.less
/* ... */
.swat-team-table:extend(.table) {
    .width100();
    height: 50em;
    background: @swat-transparent-box-background;

    .table-header {
        background-color: #666; 
        color: #000;
        font-family: 'Airborne';
        font-size: 0.9em;

        & > *:first-child {
            border: 2px solid #666 !important;
            height: 1.5em;
        }
    }

    .table-row > * {
        border-right: 2px solid #fff;
        height: 1.15em;

        &:first-child {
            border-left: 2px solid #fff;
        }
    }

    .table-row.empty > * {
        height: auto !important;
    }
}

.swat-table:extend(.table all){
    .table-header {
        .gray();
        & > *{
            padding-top: 0.5em;
            padding-bottom: 0.5em;
        }
    }
}

.table-cell-small {
    width: 2% !important;
}

.table-cell-small > img {
    width: 1.25em;
    height: auto;
}

.swat-pict(@url){
    background: url(@url) center center no-repeat;
    background-size: auto 1.2em;
}

.player-cell-name {
    width: 40%;
    text-align: left;
    padding-left: 0.35em;
}

.player-cell-score,
.player-cell-kills,
.player-cell-deaths,
.player-cell-arrests,
.player-cell-arrested,
.player-cell-objectives,
.player-cell-ping {
    width: 8%;
}

.player-cell-country {
    width: 5%;
}

.player-cell-score {
    .swat-pict('../images/css/pict_score.png');
}

.player-cell-kills {
    .swat-pict('../images/css/pict_kills.png');
}

.player-cell-deaths {
    .swat-pict('../images/css/pict_deaths.png');
}

.player-cell-arrests {
    .swat-pict('../images/css/pict_arrests.png');
}

.player-cell-arrested {
    .swat-pict('../images/css/pict_arrested.png');
}

.player-cell-objectives {
    .swat-pict('../images/css/pict_objectives.png');
}

.player-cell-ping {
    .swat-pict('../images/css/pict_ping.png');
}

.player-cell-status {
    width: 25%;
}

.swat-game-score-pane {
    float: left; 
    width: 50%; 
    height: 100%;
    overflow: hidden;

    & > .inner {
        position: relative;
        margin: 0 0.5em;
        height: 100%;

        & > .block {
            margin-bottom: 1em;

            & > .swat-box {
                height: 100%;
            }

            &.block-chat {
               height: 35%; 
               overflow: hidden;
            }

            &.block-coop-objectives {
                height: 40%;
            }

            &.block-team-table {
                width: 100%;
                height: 47.5%;
                position: absolute;
                bottom: 0;
                left: 0;
                overflow: hidden;
                border-bottom: 2px solid #fff;
            }

            &.block-coop-team-table {
                height: 100%;
                overflow: hidden;
            }

            &.block-coop-briefing {
                height: 70%; 
                overflow: hidden;
            }

            &.block-coop-procedures {
                height: 100%;
            }

            &.block-coop-chat {
               height: 10%; 
               .scrollable();
            }
        }
    }
}

.best-players {
    width: 100%;
    height: 100%;
    .float();
    overflow: hidden;

    & > .inner {
        float: left; 
        width: 33%;
        height: 50%;
        margin-bottom: 0.5em;

        .player-info {
            position: relative;

            .player-picture {
                float: left;
                font-size: 0.5em;
            }

            .player-details {
                position: absolute;
                left: 2.5em;
                margin-left: 0.5em;

                & > .score {
                    font-size: 0.9em;
                    margin-top: 0.5em;
                }
            }
        }
    }
}

.swat-timer {
    color: red;
    font-family: 'DS-Digital';
}

#swat-game-outcome {
    position: absolute; 
    top: 41.5%; 
    right: 0; 
    width: 100%;

    & > .inner {
        .swat-status-text();
        width: 100%;
        text-align: center;
    }
}

#swat-game-timer {
    position: absolute; 
    bottom: 0.3em; 
    left: 50%;
    text-align: center; 
    width: 10em;
    margin-left: -5em;

    .swat-status-text {
        margin-bottom: 0.5em;
    }

    .swat-timer {
        font-size: 2.65em;
        line-height: 0.5em;
    }
}

.swat-game-map-best {
    width: 50%;
    float: left;
}

.swat-tab-block {
    &.left {
        text-align: left;
        margin-left: 1em;
    }
    &.right {
        text-align: right;
        margin-right: 1em;
    }
    .swat-tab-button {
        margin: 0 0.15em;
    }
}

.swat-chapter-pane-container {
    height: 100%;
    position: relative; 
    .float();
}

.swat-chapter-pane {
    float: left;

    &.small {
        float: left;
        width: 25%; 
        overflow: hidden;
    }
    &.main {
        height: 100%;
        width: 75%; 
        .border-box();
    }
    &.left {
        & > * {
            margin-right: 1em; 
        }
    }
    &.right {
        float: right !important;
        & > * {
            margin-left: 1em; 
        }
    }
}

.leaderboard-list {
    .category {
        &:extend(.title.underlined);
        margin-top: 0.5em;
        margin-bottom: 0.35em !important;

        &:first-child {
            margin-top: 0 !important;
        }
    }

    a {
        display: block;
        margin-left: 1em;
    }
}

.swat-board-list {
    // display: none;
    margin-top: 0.25em;
    margin-bottom: 0.5em;
}

.board-cell-position {
    .center();
    .nowrap();
    width: 1%;
}

.board-cell-name {
    .left();
}

.board-cell-score {
    .center();
    width: 15%;
}

.board-cell-time {
    .right();
    width: 20%;
}

.board-cell-picture {
    .center();
    .nowrap();
    width: 5%;

    & > * {
        font-size: 0.65em;
    }
}

.swat-coop-score {
    text-align: right;
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 0 !important;
    width: 100%;

    .swat-heading {
        font-size: 2.8em;
    }
}
/* ... */

